--- a/formulario.html
+++ b/formulario.html
@@ -81,26 +81,26 @@
 </head>
 <body>
     <div id="formContainer">
-        <h2>Solicitud de Reserva Sala Ituzaingó</h2>
+        <h2>Solicitud de Reserva Sala Ituzaing&oacute</h2>
         
         <div class="field-group">
             <label for="nombreUsuario">Nombre:</label>
             <input type="text" id="nombreUsuario" name="nombreUsuario" placeholder="Ingrese su nombre" required>
         </div>
         <div class="field-group">
-            <label for="cantidadDias">Cantidad de días a reservar:</label>
+            <label for="cantidadDias">Cantidad de d&iacuteas a reservar:</label>
             <select id="cantidadDias" name="cantidadDias" onchange="mostrarCamposFechas()">
-                <option value="0">Seleccione cantidad de días...</option>
-                <option value="1">1 día</option>
-                <option value="2">2 días</option>
-                <option value="3">3 días</option>
-                <option value="4">4 días</option>
-                <option value="5">5 días</option>
+                <option value="0">Seleccione cantidad de d&iacuteas...</option>
+                <option value="1">1 d&iacutea</option>
+                <option value="2">2 d&iacuteas</option>
+                <option value="3">3 d&iacuteas</option>
+                <option value="4">4 d&iacuteas</option>
+                <option value="5">5 d&iacuteas</option>
             </select>
         </div>
 
         <div id="fechasContainer">
-            <!-- Los campos de fechas se agregarán dinámicamente aquí -->
+            <!-- Los campos de fechas se agregar&aacuten dinámicamente aqu&iacute -->
         </div>
 
         <div class="field-group">
@@ -190,7 +190,7 @@
                     }
                 }
             } else {
-                alert("Por favor, seleccione la cantidad de días a reservar.");
+                alert("Por favor, seleccione la cantidad de d&iacuteas a reservar.");
             }
         }
 
