--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="es"><head>
+ï»¿<!DOCTYPE html><html lang="es"><head>
 <meta charset="ISO-8859-1">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Calendario de Reservas</title>
@@ -11,7 +11,7 @@
         color:grey;
       text-align:center;
      }
-.correo {    display: inline-block;    margin-left: 15px;    padding: 10px 20px;    background-color: #4CAF50; /* Color de fondo verde */    color: white; /* Color de texto blanco */    text-align: center;    text-decoration: none;    border: none;    cursor: pointer;    border-radius: 5px; /* Bordes redondeados */    transition: background-color 0.3s ease; /* Transición suave del color de fondo */}.correo:hover {    background-color: #45a049; /* Color de fondo verde más oscuro al pasar el mouse */}.correo:active {    background-color: #3e8e41; /* Color de fondo verde más oscuro cuando se hace clic */}    table {
+.correo {    display: inline-block;    margin-left: 15px;    padding: 10px 20px;    background-color: #4CAF50; /* Color de fondo verde */    color: white; /* Color de texto blanco */    text-align: center;    text-decoration: none;    border: none;    cursor: pointer;    border-radius: 5px; /* Bordes redondeados */    transition: background-color 0.3s ease; /* TransiciÃ³n suave del color de fondo */}.correo:hover {    background-color: #45a049; /* Color de fondo verde mÃ¡s oscuro al pasar el mouse */}.correo:active {    background-color: #3e8e41; /* Color de fondo verde mÃ¡s oscuro cuando se hace clic */}    table {
         border-collapse: collapse;
         margin-top: 50px;
         margin-left: auto;
@@ -19,11 +19,11 @@
     }    .vacio{
     background-color:#616a6b; }    th,td{
       border: 0.5px solid #dddddd;       text-align: center;        padding: 6px;    }    td.LIBRE{     font-size:10px;     Background-color:   #28b463;      color:white;                     height:10px                                        }    th.horario{
-    font-size: 12px; /* Tamaño de la fuente */    Background-color: #616a6b; color:#fdfefe;      padding: 8px 8px;     font-weight: bold;            }    td.dia{    font-size: 14px; /* Tamaño de la fuente */    font-weight: bold;     padding: 2px;    color:#fdfefe; width:15% ;    background-color: #616a6b; }    td{    font-size:10px; /* Tamaño de la fuente */    color:black;                                    background-color: #b2babb;                                                                      }    }
-    th {        background-color:#b2babb;       padding:3px;    }</style></head><body><h2>Disponibilidad de Reservas Sala Ituzaingó 2024</h2><a href='formulario.html' target='_blank' style='background-color: #4CAF50; color: white; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 14px; cursor: pointer; border-radius: 5px; font-weight: bold;'>Solicitar Agenda</a><table>    <thead>        <tr>            <th class="vacio"></th> <!-- Espacio vacío para días --><th class="horario">09:00-09:30</th><th class="horario">09:30-10:00</th><th class="horario">10:00-10:30</th><th class="horario">10:30-11:00</th><th class="horario">11:00-11:30</th><th class="horario">11:30-12:00</th><th class="horario">12:00-12:30</th><th class="horario">12:30-13:00</th><th class="horario">13:00-13:30</th><th class="horario">13:30-14:00</th><th class="horario">14:00-14:30</th><th class="horario">14:30-15:00</th><th class="horario">15:00-15:30</th><th class="horario">15:30-16:00</th><th class="horario">16:00-16:30</th><th class="horario">16:30-17:00</th>        </tr>
+    font-size: 12px; /* TamaÃ±o de la fuente */    Background-color: #616a6b; color:#fdfefe;      padding: 8px 8px;     font-weight: bold;            }    td.dia{    font-size: 14px; /* TamaÃ±o de la fuente */    font-weight: bold;     padding: 2px;    color:#fdfefe; width:15% ;    background-color: #616a6b; }    td{    font-size:10px; /* TamaÃ±o de la fuente */    color:black;                                    background-color: #b2babb;                                                                      }    }
+    th {        background-color:#b2babb;       padding:3px;    }</style></head><body><h2>Disponibilidad de Reservas Sala ItuzaingÃ³ 2024</h2><a href='formulario.html' target='_blank' style='background-color: #4CAF50; color: white; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 14px; cursor: pointer; border-radius: 5px; font-weight: bold;'>Solicitar Agenda</a><table>    <thead>        <tr>            <th class="vacio"></th> <!-- Espacio vacÃ­o para dÃ­as --><th class="horario">09:00-09:30</th><th class="horario">09:30-10:00</th><th class="horario">10:00-10:30</th><th class="horario">10:30-11:00</th><th class="horario">11:00-11:30</th><th class="horario">11:30-12:00</th><th class="horario">12:00-12:30</th><th class="horario">12:30-13:00</th><th class="horario">13:00-13:30</th><th class="horario">13:30-14:00</th><th class="horario">14:00-14:30</th><th class="horario">14:30-15:00</th><th class="horario">15:00-15:30</th><th class="horario">15:30-16:00</th><th class="horario">16:00-16:30</th><th class="horario">16:30-17:00</th>        </tr>
     </thead>
     <tbody>
-        <!-- Filas para cada día del mes -->
+        <!-- Filas para cada dÃ­a del mes -->
         <tr>
 <td class="dia">martes 23 julio</td> 
 <td class=RESERVADA>RESERVADA</td> 
@@ -43,7 +43,7 @@
 <td class=RESERVADA>RESERVADA</td>
 <td class=RESERVADA>RESERVADA</td>
 </tr>
-<td class="dia">miércoles 24 julio</td> 
+<td class="dia">miÃ©rcoles 24 julio</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
@@ -133,7 +133,7 @@
 <td class=LIBRE>LIBRE</td>
 <td class=LIBRE>LIBRE</td>
 </tr>
-<td class="dia">miércoles 31 julio</td> 
+<td class="dia">miÃ©rcoles 31 julio</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
@@ -223,7 +223,7 @@
 <td class=LIBRE>LIBRE</td>
 <td class=LIBRE>LIBRE</td>
 </tr>
-<td class="dia">miércoles 07 agosto</td> 
+<td class="dia">miÃ©rcoles 07 agosto</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
@@ -313,7 +313,7 @@
 <td class=LIBRE>LIBRE</td>
 <td class=LIBRE>LIBRE</td>
 </tr>
-<td class="dia">miércoles 14 agosto</td> 
+<td class="dia">miÃ©rcoles 14 agosto</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
@@ -403,7 +403,7 @@
 <td class=LIBRE>LIBRE</td>
 <td class=LIBRE>LIBRE</td>
 </tr>
-<td class="dia">miércoles 21 agosto</td> 
+<td class="dia">miÃ©rcoles 21 agosto</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
@@ -493,7 +493,7 @@
 <td class=LIBRE>LIBRE</td>
 <td class=LIBRE>LIBRE</td>
 </tr>
-<td class="dia">miércoles 28 agosto</td> 
+<td class="dia">miÃ©rcoles 28 agosto</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
