--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
 </tr>
 <td class="dia">jueves 25 julio</td> 
 <td class=RESERVADA>RESERVADA</td> 
@@ -583,4 +583,6 @@
 <td class=LIBRE>LIBRE</td>
 <td class=LIBRE>LIBRE</td>
 </tr>
+</body>
+</html>
 
