--- a/index.html
+++ b/index.html
@@ -25,24 +25,6 @@
     <tbody>
         <!-- Filas para cada día del mes -->
         <tr>
-<td class="dia">martes 23 julio</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-</tr>
 <td class="dia">miércoles 24 julio</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
@@ -206,15 +188,15 @@
 <td class=LIBRE>LIBRE</td>
 </tr>
 <td class="dia">martes 06 agosto</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td> 
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
 <td class=LIBRE>LIBRE</td>
 <td class=LIBRE>LIBRE</td>
 <td class=LIBRE>LIBRE</td>
@@ -566,6 +548,24 @@
 <td class=LIBRE>LIBRE</td>
 </tr>
 <td class="dia">martes 03 septiembre</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+</tr>
+<td class="dia">miércoles 04 septiembre</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
