--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
         <!-- Filas para cada día del mes -->
         <tr>
 <td class="dia">miércoles 24 julio</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td>
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td>
 <td class=RESERVADA>RESERVADA</td>
 <td class=RESERVADA>RESERVADA</td>
 <td class=RESERVADA>RESERVADA</td>
