--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
 <td class=RESERVADA>RESERVADA</td> 
 <td class=RESERVADA>RESERVADA</td>
 <td class=RESERVADA>RESERVADA</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
 </tr>
 <td class="dia">lunes 29 julio</td> 
 <td class=LIBRE>LIBRE</td> 
@@ -124,14 +124,14 @@
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
 </tr>
 <td class="dia">jueves 01 agosto</td> 
 <td class=LIBRE>LIBRE</td> 
