--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
 </tr>
 <td class="dia">viernes 02 agosto</td> 
 <td class=LIBRE>LIBRE</td> 
