--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
 <td class=LIBRE>LIBRE</td>
 </tr>
 <td class="dia">jueves 01 agosto</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td>
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td>
 <td class=RESERVADA>RESERVADA</td>
 <td class=RESERVADA>RESERVADA</td>
 <td class=RESERVADA>RESERVADA</td>
@@ -116,15 +116,15 @@
 <td class=RESERVADA>RESERVADA</td>
 </tr>
 <td class="dia">viernes 02 agosto</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td>
-<td class=LIBRE>LIBRE</td>
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td> 
+<td class=RESERVADA>RESERVADA</td>
+<td class=RESERVADA>RESERVADA</td>
 <td class=LIBRE>LIBRE</td>
 <td class=LIBRE>LIBRE</td>
 <td class=LIBRE>LIBRE</td>
