--- a/formulario.html
+++ b/formulario.html
@@ -1,14 +1,19 @@
 ﻿<!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="ISO-8859-1">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solicitud de Reserva</title>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #80CBC4;
+            
+             
+            background-image: url('sala1.jpg'); /* Ruta de la imagen de fondo */
+            background-size: cover; /* Ajusta el tamaño de la imagen para cubrir toda la pantalla */
+            background-position: center; /* Centra la imagen */
+            background-repeat: no-repeat; /* Evita que la imagen se repita */
             text-align: center;
             margin-top: 50px;
         }
@@ -190,7 +195,7 @@
                     }
                 }
             } else {
-                alert("Por favor, seleccione la cantidad de d&iacuteas a reservar.");
+                alert("Por favor, seleccione la cantidad de días a reservar.");
             }
         }
 
