--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <style>
     body {
         font-family: Arial, sans-serif;
-        background-color:  #d8eaef;
+        background-image: url('sala1.jpg'); & vbCrLf/* Ruta de la imagen de fondo */        background-size: cover; & vbCrLf /* Ajusta el tamaño de la imagen para cubrir toda la pantalla */         background-position: center; & vbCrLf /* Centra la imagen */         background-repeat: no-repeat; & vbCrLf /* Evita que la imagen se repita */        background-color:  #d8eaef;
     }
     h2 {
-        color:grey;
+        color:white;
       text-align:center;
      }
 .correo {    display: inline-block;    margin-left: 15px;    padding: 10px 20px;    background-color: #4CAF50; /* Color de fondo verde */    color: white; /* Color de texto blanco */    text-align: center;    text-decoration: none;    border: none;    cursor: pointer;    border-radius: 5px; /* Bordes redondeados */    transition: background-color 0.3s ease; /* Transición suave del color de fondo */}.correo:hover {    background-color: #45a049; /* Color de fondo verde más oscuro al pasar el mouse */}.correo:active {    background-color: #3e8e41; /* Color de fondo verde más oscuro cuando se hace clic */}    table {
