--- a/index.html
+++ b/index.html
@@ -25,24 +25,6 @@
     <tbody>
         <!-- Filas para cada día del mes -->
         <tr>
-<td class="dia">lunes 29 julio</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td> 
-<td class=LIBRE>LIBRE</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-<td class=RESERVADA>RESERVADA</td>
-</tr>
 <td class="dia">martes 30 julio</td> 
 <td class=RESERVADA>RESERVADA</td> 
 <td class=RESERVADA>RESERVADA</td> 
@@ -566,6 +548,24 @@
 <td class=LIBRE>LIBRE</td>
 </tr>
 <td class="dia">lunes 09 septiembre</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td> 
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+<td class=LIBRE>LIBRE</td>
+</tr>
+<td class="dia">martes 10 septiembre</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
 <td class=LIBRE>LIBRE</td> 
